Code improvements.